--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.136",
     "lodash": "^4.17.15",
-    "next": "latest",
+    "next": "^9.5.2",
     "next-images": "^1.1.2",
     "pose": "^2.3.1",
     "react": "16.8.6",
